--- a/less/header.less
+++ b/less/header.less
@@ -131,7 +131,7 @@ header {
 
         @media (max-width: @mobile) {
             flex-direction: column;
-            height: 700px;
+            height: 800px;
 
             .big_desi {
                 width: 30%;
@@ -149,6 +149,10 @@ header {
                 width: 90%;
                 min-width: 0;
                 text-align: center;
+
+                h1 {
+                    font-size: 4.3rem;
+                };
             };
         };
     };
